--- a/practice 1.ipynb
+++ b/practice 1.ipynb
@@ -304,7 +304,7 @@
     }
    ],
    "source": [
-    "# user input add user\n",
+    "# user input add data in list\n",
     "lst = []\n",
     "n = int(input(\"ENTER THE TOTAL ELEMENT YOU WANT INSIDE YOUR LIST - \"))\n",
     "for i in range(0,n):\n",
@@ -319,8 +319,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e06b98a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the number add in list  2\n",
+      "enter the data  hello\n",
+      "enter the data  python\n",
+      "['hello', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "l = []\n",
+    "n = int(input('enter the number add in list  '))\n",
+    "for i in range(0,n):\n",
+    "    ele = input('enter the data  ')\n",
+    "    l.append(ele)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "07a6ff33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTER YOUR NAME ashish\n",
+      "ENTER THE AGE 22\n",
+      "ashish you born in the 2000 year\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the when age will be 100 year old?\n",
+    "\n",
+    "name = input(\"ENTER YOUR NAME \")\n",
+    "age = int(input(\"ENTER THE AGE \"))\n",
+    "birth_year=2022-age\n",
+    "print(name+\" you born in the \"+str(birth_year)+' year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a944eb7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTER YOUR NAME ashish\n",
+      "ENTER THE AGE 22\n",
+      "ashish you born in the 2000 year\n",
+      "ashish you will be 100 year old in 2100 year\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the when age will be 100 year old?\n",
+    "\n",
+    "name = input(\"ENTER YOUR NAME \")\n",
+    "age = int(input(\"ENTER THE AGE \"))\n",
+    "birth_year=2022-age\n",
+    "print(name+\" you born in the \"+str(birth_year)+' year')\n",
+    "future_year=birth_year+100\n",
+    "print(name+' you will be 100 year old in '+str(future_year)+' year')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c9d4cf0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the no till what you want the series  5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print fibonacci sequence\n",
+    "no = int(input(\"enter the no till what you want the series  \"))\n",
+    "a=0\n",
+    "b=1\n",
+    "c=0\n",
+    "i=1\n",
+    "while i<no:\n",
+    "    c=a+b\n",
+    "    a=b\n",
+    "    b=c\n",
+    "    i=i+1\n",
+    "    \n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "17e3e28c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the string : before\n",
+      "3\n",
+      "for\n"
+     ]
+    }
+   ],
+   "source": [
+    "# return middle chr in string\n",
+    "\n",
+    "st = input(\"enter the string : \")\n",
+    "middle = int(len(st)/2)\n",
+    "print(middle)\n",
+    "print(st[middle-1:middle+2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2f612a",
    "metadata": {},
    "outputs": [],
    "source": []
